Fix bug with min-height not filling the viewport on ios safari.

--- a/@duely/react/tailwind.css
+++ b/@duely/react/tailwind.css
@@ -24,6 +24,8 @@
   body,
   #root {
     @apply min-h-full;
+    min-height: -moz-available;
+    min-height: -webkit-fill-available;
   }
 
   /* see: https://developers.google.com/recaptcha/docs/faq#id-like-to-hide-the-recaptcha-badge.-what-is-allowed */
